--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "build:github": "uni build -- --deploy"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-4020420240722002",
